# passphrase-gen

./: .gitignore  Cargo.toml  README.md
src/: main.rs  read.rs  write.rs
