[package]
name = "passphrase-gen"
version = "0.1.0"
edition = "2021"
authors = ["Lílian Ferreira de Freitas <lily.mosquitoes@gmail.com>"]

[dependencies]
clap = { version = "3.1", features = ["derive"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
cli-table = "0.4"
anyhow = "1"
